# haskell-book

./: Ch06_05_EqInstances.hs
ch07/: Ch07_05_CasePractice.hs
ch08/: Ch08_06_Exercises.hs
ch09/: Ch09_11_Zipping.hs  Ch09_12_Exercises.hs  Cipher.hs
ch10/: Ch10_06_Database_Processing.hs  Ch10_09_Scans.hs  Ch10_10_Exercises.hs
ch11/: Ch11_13_Programmers.hs  Ch11_17_Binary_Trees.hs  Ch11_18_Exercises.hs  Ch11_18_Exercises_Huttons_Razor.hs  Ch11_18_Exercises_Phone.hs  Ch11_18_Exercises_Vigenere.hs
ch12/: Ch12_05_Exercises.hs
ch13/: Ch13_Exercises.hs
ch13/ciphers/: ciphers.cabal
ch13/ciphers/exe/: MainCaesar.hs  MainVigenere.hs  Test.hs
ch13/ciphers/src/: Caesar.hs  Vigenere.hs
ch15/: Ch15_10_Optional_Monoid.hs  Ch15_12_Another_Monoid.hs  Ch15_12_Exercise.hs  Ch15_12_QuickCheck.hs  Ch15_15_Exercises.hs
ch16/: Ch16_07_Exercises.hs  Ch16_07_Replace_Experiment.hs  Ch16_10_Exercises.hs  Ch16_17_Exercises.hs  SlowQuickCheck.hs
ch17/: Ch17_05_Exercise_FixerUpper.hs  Ch17_05_Exercise_Instances.hs  Ch17_05_Exercises_Lookups.hs  Ch17_07_BadMonoid.hs  Ch17_08_List_Applicative.hs  Ch17_08_List_Applicative2.hs  Ch17_08_Variation_on_Either.hs  Ch17_08_ZipList.hs  Ch17_09_Exercises.hs
ch18/: Ch18_02.hs  Ch18_05_EitherMonad.hs  Ch18_07_Exercises.hs
ch19/: shawty.cabal
ch20/: Ch20_04_FoldableInstances.hs  Ch20_05_LibraryFunctions.hs  Ch20_06_Exercises.hs
ch21/: Ch21_07_AxingTediousCode.hs  Ch21_08_HttpStuff.hs  Ch21_12_Exercises.hs  Ch21_12_ExercisesSkiFree.hs  Ch21_12_ExercisesTree.hs
ch22/: Ch22_02.hs  Ch22_05_Reader.hs  Ch22_06_FunctionApplicative.hs  (+3 more)
(+53 files in other folders)
