name:                ciphers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ciphers#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable test
  hs-source-dirs:      exe
  main-is:             Test.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ciphers

executable caesar
  hs-source-dirs:      exe
  main-is:             MainCaesar.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ciphers

executable vigenere
  hs-source-dirs:      exe
  main-is:             MainVigenere.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ciphers

library
  hs-source-dirs:      src
  exposed-modules:     Caesar
                     , Vigenere
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010